--- a/HTML e CSS/Desafios/Desafio3/catalogo/VerMais.html
+++ b/HTML e CSS/Desafios/Desafio3/catalogo/VerMais.html
@@ -28,6 +28,8 @@
 
   <img src="./assets/img/Clevertao e o amor de sua vida.jpg" alt="Amor puro">
 
-  
+  <p>CLEVERTON  E MARIA </p>
+
+
 </body>
 </html>
