--- a/HTML e CSS/Exercícios do Módulo II (CSS)/Flexbox/Exemplo1/index.html
+++ b/HTML e CSS/Exercícios do Módulo II (CSS)/Flexbox/Exemplo1/index.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>FlexboxÇ Display, Gap e Flex-Direction</title>
+    <title>Flexbox: Display, Gap e Flex-Direction</title>
 </head>
 <body>
 
+    <h1>Flexbox em Ação</h1>
 
-    <h1>FLexbox em Ação</h1>
-
-    <div Class="flex-container">
-        <div Class="Item">Item1</div>
-        <div Class="Item">Item2</div>
-        <div Class="Item">Item3</div>
+    <div class="flex-container">
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
     </div>
 
-    <p Class="dica">
-        <strong>Introducoes:</strong> Abra o Inspectador(DevTools) e edite os valores de CSS no <code>.flex-container</code><br>
-        1. Para empilhar, mude <code>flex-direction: row;</code> para **<code>column;</code>**.<br>
-        2. Para remover o espaco, mude <code>gap: 20px;</code> para **<code>0;</code>**.
+    <p class="dica">
+        <strong>Instruções:</strong> Abra o inspetor (DevTools) e edite os valores de CSS no 
+        <code>.flex-container</code>.<br><br>
+        1. Para empilhar, mude <code>flex-direction: row;</code> para 
+        <code>column;</code>.<br>
+        2. Para remover o espaço, mude <code>gap: 20px;</code> para 
+        <code>0;</code>.
     </p>
-
 
 </body>
 </html>
