--- a/HTML e CSS/Exercícios do Módulo II (CSS)/Grid/exe29/exercise3.html
+++ b/HTML e CSS/Exercícios do Módulo II (CSS)/Grid/exe29/exercise3.html
@@ -45,6 +45,10 @@
       background-color: #E58331;
       /* TODO: Faça com que o livro do Div3 fique 
       igual a imagem goal3 usando grid-row. */
+
+
+      display: grid;
+      grid-row: span 2; 
     }
   </style>
 </head>
