--- a/HTML e CSS/Exercícios do Módulo II (CSS)/Grid/exe28/test.html
+++ b/HTML e CSS/Exercícios do Módulo II (CSS)/Grid/exe28/test.html
@@ -58,6 +58,11 @@
       background-color: #ddd;
       padding: 20px;
       margin: 2rem;
+      display: grid;
+      gap: 3px;
+      grid-template-columns: 300px 400px 500px;
+      grid-template-rows: 70px 70px 150px 50px;
+      
     }
 
     .grid-item {
