--- a/HTML e CSS/Desafios/Desafio4 - Ordem Paranormal/html/index.html
+++ b/HTML e CSS/Desafios/Desafio4 - Ordem Paranormal/html/index.html
@@ -71,9 +71,7 @@
         height="57"
       />
 
-      <h1 class="display-5 fw-bold">
-        Banco de Dados de Criaturas Paranormais
-      </h1>
+      <h1 class="display-5 fw-bold">Banco de Dados de Criaturas Paranormais</h1>
 
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">
@@ -82,17 +80,18 @@
         </p>
 
         <p class="lead mb-4">
-          O Sistema de Registro de Criaturas, essencial para catalogar e entender
-          ameaças paranormais, foi parcialmente destruído. Sem esse sistema
-          funcionando, a humanidade fica às cegas, incapaz de identificar,
-          estudar ou se proteger das criaturas que surgem nas sombras.
+          O Sistema de Registro de Criaturas, essencial para catalogar e
+          entender ameaças paranormais, foi parcialmente destruído. Sem esse
+          sistema funcionando, a humanidade fica às cegas, incapaz de
+          identificar, estudar ou se proteger das criaturas que surgem nas
+          sombras.
         </p>
 
         <p class="lead mb-4">
-          Agora, novos agentes são convocados. Antes de qualquer confronto direto
-          com o paranormal, a missão é clara: reconstruir o sistema, recuperar
-          informações perdidas e organizar os registros novamente. Só assim será
-          possível compreender o que está lá fora — e sobreviver.
+          Agora, novos agentes são convocados. Antes de qualquer confronto
+          direto com o paranormal, a missão é clara: reconstruir o sistema,
+          recuperar informações perdidas e organizar os registros novamente. Só
+          assim será possível compreender o que está lá fora — e sobreviver.
         </p>
 
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
@@ -109,66 +108,66 @@
 
       <!-- CRIATURAS REGISTRADAS -->
       <section class="container px-4 py-5" id="criaturas">
-        <h2 class="pb-2 border-bottom">Criaturas Registradas</h2>
+        <h2 class="pb-2 border-bottom text-center">Criaturas Registradas</h2>
 
-        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 py-4">
           <!-- CARD 1 -->
-          <div class="col d-flex align-items-start">
-            <div
-              class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3"
-            >
-              <svg class="bi" width="1em" height="1em" aria-hidden="true">
-                <use xlink:href="#toggles2"></use>
-              </svg>
-            </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis"></h3>
-              <p>
-                Parágrafo de texto abaixo do título para explicá-lo. Vamos
-                acrescentar mais uma frase e provavelmente continuaremos até
-                ficarmos sem palavras.
-              </p>
-              <a href="#" class="btn btn-primary">Botão principal</a>
+          <div class="col">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title">O Observador das Fendas</h5>
+                <h6 class="card-subtitle mb-2 text-danger">
+                  Nível de ameaça: ⚠️ Alto
+                </h6>
+                <p class="card-text">
+                  Uma entidade silenciosa que observa suas vítimas através de
+                  rachaduras, espelhos e sombras. Quanto mais tempo é ignorado,
+                  mais próximo ele fica.
+                </p>
+              </div>
+              <div class="card-footer bg-transparent border-0">
+                <a href="#" class="btn btn-primary w-100">Ver Detalhes</a>
+              </div>
             </div>
           </div>
 
           <!-- CARD 2 -->
-          <div class="col d-flex align-items-start">
-            <div
-              class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3"
-            >
-              <svg class="bi" width="1em" height="1em" aria-hidden="true">
-                <use xlink:href="#cpu-fill"></use>
-              </svg>
-            </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis">Título em destaque</h3>
-              <p>
-                Parágrafo de texto abaixo do título para explicá-lo. Vamos
-                acrescentar mais uma frase e provavelmente continuaremos até
-                ficarmos sem palavras.
-              </p>
-              <a href="#" class="btn btn-primary">Botão principal</a>
+          <div class="col">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title">A Dama do Sussurro</h5>
+                <h6 class="card-subtitle mb-2 text-warning">
+                  Nível de ameaça: ⚠️ Médio
+                </h6>
+                <p class="card-text">
+                  Manifesta-se por vozes suaves que levam à paranoia. Costuma
+                  atacar grupos isolados durante a noite, explorando medos
+                  pessoais.
+                </p>
+              </div>
+              <div class="card-footer bg-transparent border-0">
+                <a href="#" class="btn btn-primary w-100">Ver Detalhes</a>
+              </div>
             </div>
           </div>
 
           <!-- CARD 3 -->
-          <div class="col d-flex align-items-start">
-            <div
-              class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3"
-            >
-              <svg class="bi" width="1em" height="1em" aria-hidden="true">
-                <use xlink:href="#tools"></use>
-              </svg>
-            </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis">Título em destaque</h3>
-              <p>
-                Parágrafo de texto abaixo do título para explicá-lo. Vamos
-                acrescentar mais uma frase e provavelmente continuaremos até
-                ficarmos sem palavras.
-              </p>
-              <a href="#" class="btn btn-primary">Botão principal</a>
+          <div class="col">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title">O Carcereiro Ósseo</h5>
+                <h6 class="card-subtitle mb-2 text-dark">
+                  Nível de ameaça: ⚠️ Crítico
+                </h6>
+                <p class="card-text">
+                  Criatura formada por restos humanos e correntes etéreas.
+                  Guarda locais amaldiçoados e elimina qualquer um que tente
+                  escapar.
+                </p>
+              </div>
+              <div class="card-footer bg-transparent border-0">
+                <a href="#" class="btn btn-primary w-100">Ver Detalhes</a>
+              </div>
             </div>
           </div>
         </div>
