--- a/HTML e CSS/Desafios/Desafio4 - Ordem Paranormal/html/index.html
+++ b/HTML e CSS/Desafios/Desafio4 - Ordem Paranormal/html/index.html
@@ -174,6 +174,41 @@
       </section>
     </main>
 
+    <!-- FOOTER -->
+<footer class="container">
+  <div
+    class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
+  >
+    <p class="col-md-4 mb-0 text-body-secondary">
+      © Arquivo da Ordem — 2026
+    </p>
+
+    <a
+      href="#"
+      class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-decoration-none"
+      aria-label="Registro Paranormal"
+    >
+      <span class="fs-5 fw-bold text-body-emphasis">Registro Paranormal</span>
+    </a>
+
+    <ul class="nav col-md-4 justify-content-end">
+      <li class="nav-item">
+        <a href="#" class="nav-link px-2 text-body-secondary">Início</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link px-2 text-body-secondary">Criaturas</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link px-2 text-body-secondary">Sobrevivência</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link px-2 text-body-secondary">Contato</a>
+      </li>
+    </ul>
+  </div>
+</footer>
+
+
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
