--- a/HTML e CSS/Desafios/Desafio4 - Ordem Paranormal/index.html
+++ b/HTML e CSS/Desafios/Desafio4 - Ordem Paranormal/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+   
+
     <title>Registro Paranormal</title>
+    
 
     <!-- Bootstrap CSS -->
     <link
@@ -13,13 +16,15 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
+
+    <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Menu</a>
+        <a class="navbar-brand" href="#">Arquivo da ordem</a>
 
         <button
           class="navbar-toggler"
@@ -36,10 +41,10 @@
         <div class="collapse navbar-collapse" id="navbarMain">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Início</a>
+              <a class="nav-link active" href="#body">Início</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Criaturas</a>
+              <a class="nav-link active" href="#criaturas">Criaturas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Sobrevivência</a>
@@ -115,6 +120,7 @@
           <div class="col">
             <div class="card h-100 shadow-sm">
               <div class="card-body">
+                <img src="./img/criatura1.jpg" alt="observador de Fendas"><br><hr>
                 <h5 class="card-title">O Observador das Fendas</h5>
                 <h6 class="card-subtitle mb-2 text-danger">
                   Nível de ameaça: ⚠️ Alto
@@ -135,6 +141,7 @@
           <div class="col">
             <div class="card h-100 shadow-sm">
               <div class="card-body">
+                <img src="./img/criatura2.jpg" alt="a dama do sussurro"> <br><hr>
                 <h5 class="card-title">A Dama do Sussurro</h5>
                 <h6 class="card-subtitle mb-2 text-warning">
                   Nível de ameaça: ⚠️ Médio
@@ -155,6 +162,7 @@
           <div class="col">
             <div class="card h-100 shadow-sm">
               <div class="card-body">
+                <img src="./img/criatura3.jpg" alt="O Carcereiro osseo"><br><hr>
                 <h5 class="card-title">O Carcereiro Ósseo</h5>
                 <h6 class="card-subtitle mb-2 text-dark">
                   Nível de ameaça: ⚠️ Crítico
