--- a/HTML e CSS/Desafios/Desafio4 - Ordem Paranormal/index.html
+++ b/HTML e CSS/Desafios/Desafio4 - Ordem Paranormal/index.html
@@ -109,6 +109,13 @@
         </div>
       </div>
 
+      <br><br>
+
+      <button id="btnSistema" class="btn btn-danger btn-lg px-4">
+        Testar Sistema Paranormal
+      </button>
+      
+
       <hr class="my-5" />
 
       <!-- CRIATURAS REGISTRADAS -->
